--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-</head>
-<body>
-    <h1>Home Page</h1>
-    
-</body>
-</html>
+{{ template "base" .}}
+
+{{ define "content" }}
+   <h1>Home</h1>
+{{ end }}
