--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home Page</title>
+        <title>
+            {{ block "title" .}}
+            
+            {{ end }}
+        </title>
         {{ block "css" .}}
 
         {{ end }}
