42. Experimenting with sessions

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,4 +4,13 @@
    <h1>About</h1>
 
    <p>This came from a template: {{index .StringMap "test"}}</p>
+
+   <p>
+      {{ if ne (index .StringMap "remote_ip") "" }}
+         Your remote IP address is {{index .StringMap "remote_ip"}}.
+      {{ else }}
+         I don't know your remote IP address yet. Visit the 
+         <a href="/">Home page</a> so I can set.
+      {{ end }}
+   </p>
 {{ end }}
